<resources>
    <string name="app_name">Ticket To Ride</string>

    <!-- Strings related to login -->
    <string name="username">Username:</string>
    <string name="password">Password:</string>
    <string name="confirmPassword">Confirm Password:</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="serverHost">Server Host:</string>
    <string name="serverPort">Server Port:</string>

    <!-- Strings related to activeGame room -->
    <string name="sampleText">SAMPLE TEXT</string>
    <string name="gameNum">  #</string>
    <string name="gameName">Game Name</string>
    <string name="creator">Creator</string>
    <string name="inGame">In Game</string>
    <string name="createGame">Create Game</string>
    <string name="joinGame">Join Game</string>
    <string name="joinPopUpMessage">Do you really want to join this activeGame?</string>
    <string name="positiveJoinGame">Yes</string>
    <string name="negativeJoinGame">No</string>


    <!-- Strings related to activeGame lobby -->
    <string name="waiting">Waiting for people to join game&#8230;</string>
    <string name="startGame">Start Game</string>

    <!-- Strings related to gameplay screen -->
    <string name="displayGameStatus">Display Game Status</string>
    <string name="drawTrains">Draw Trains</string>
    <string name="claimRoute">Claim Route</string>
    <string name="drawDestCard">Draw Dest. Cards</string>
    <string name="demo">Demo</string>
    <string name="playersTurn">Player\'s turn</string>

    <!-- Strings related to trainDeckFragment -->
    <string name="trainDrawerTitle">Bank</string>

    <!-- Strings related to currentGameStatusFragment -->
    <string name="chat">Chat</string>
    <string name="gameHistory">Game History</string>
    <string name="destCards">Destination Cards</string>
    <string name="zero">0</string>
    <string name="exit">Exit</string>
    <string name="yourCards">Your Cards</string>

    <string name="red">Red: </string>
    <string name="blue">Blue: </string>
    <string name="green">Green: </string>
    <string name="purple">Purple: </string>
    <string name="orange">Orange: </string>
    <string name="white">White: </string>
    <string name="black">Black: </string>
    <string name="yellow">Yellow: </string>
    <string name="wild">Wild: </string>

    <string name="name">Name</string>
    <string name="player">Player</string>
    <string name="points">Points</string>
    <string name="trains">Trains</string>
    <string name="cards">Cards</string>
    <string name="routes">Routes</string>
    <string name="dests">Destinations</string>

    <!-- Strings related to game over screen -->
    <string name="gameOver">GAME OVER</string>
    <string name="winner">WINNER: </string>
    <string name="totalPoints">Total Points</string>
    <string name="pointsDC">Dest. Card Points</string>
    <string name="pointsLostDC">Dest. Card Points Lost</string>
    <string name="longestPath">Longest Path: </string>
    <string name="routePoints">Route Points</string>
    <string name="empty"> </string>

    <!-- Strings related to choosing dest. cards fragment -->
    Choose up to 2 cards to discard.
    <string name="choose2destCards">Choose up to 2 cards to discard:</string>
    <string name="done">Done</string>

</resources>
