<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frame"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/us_map" >

    <Button
        android:id="@+id/display_game_status"
        android:layout_width="wrap_content"
        android:layout_height="96dp"
        android:layout_margin="8dp"
        android:text="@string/displayGameStatus"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <LinearLayout
        android:id="@+id/Buttons"
        android:layout_width="512dp"
        android:layout_height="96dp"
        android:layout_marginStart="8dp"
        android:layout_marginBottom="8dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <Button
            android:id="@+id/button_drawTrains"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/drawTrains" />

        <Button
            android:id="@+id/button_placeTrains"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/claimRoute" />

        <Button
            android:id="@+id/button_drawRoute"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/drawRoute" />
    </LinearLayout>


    <!--<fragment-->
        <!--android:id="@+id/fragment_train_card_deck"-->
        <!--android:name="com.example.amandafails.tickettoride.app.activities.ViewsPresenters.Gameplay.TrainCardDeckFragment"-->
        <!--android:layout_width="0dp"-->
        <!--android:layout_height="match_parent"-->
        <!--android:layout_weight="1"-->
        <!--app:layout_constraintStart_toStartOf="parent" />-->


</android.support.constraint.ConstraintLayout>