<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="1"
    android:orientation="vertical"
    android:background="@color/loginBackground">

    <ImageView
        android:id="@+id/loginImage"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:src="@drawable/title_screen" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp"
        android:gravity="center">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginEnd="30dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:columnCount="2"
                android:padding="15dp">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/login_username_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:text="@string/username"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/login_username_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:padding="10dp" />

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/login_password_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_column="1"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:text="@string/password"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/login_password_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:ems="10"
                        android:inputType="textPassword" />

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/button_login"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="end|top|center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:freezesText="false"
                android:padding="10dp"
                android:text="@string/login" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top"
            android:layout_marginStart="30dp"
            android:background="@android:color/white"
            android:orientation="vertical">

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="225dp"
                android:layout_rowWeight="1"
                android:layout_columnWeight="1"
                android:layout_gravity="left|center_vertical"
                android:columnCount="2"
                android:padding="15dp"
                android:rowCount="3">

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/register_username_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:text="@string/username"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/register_username_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:ems="10"
                        android:inputType="textPersonName"
                        android:padding="10dp" />

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/register_password_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:text="@string/password"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/register_password_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:ems="10"
                        android:inputType="textPassword" />

                </TableRow>

                <TableRow
                    android:layout_width="fill_parent"
                    android:layout_height="fill_parent">

                    <TextView
                        android:id="@+id/register_confirm_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:padding="10dp"
                        android:text="@string/confirmPassword"
                        android:textSize="20sp" />

                    <EditText
                        android:id="@+id/register_confirm_edit_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:ems="10"
                        android:inputType="textPassword" />

                </TableRow>

            </TableLayout>

            <Button
                android:id="@+id/button_register"
                style="@style/Widget.AppCompat.Button.Small"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_gravity="end|top|center_vertical"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:layout_marginBottom="10dp"
                android:padding="10dp"
                android:text="@string/register" />

        </LinearLayout>

    </LinearLayout>


</LinearLayout>